test/log/reduction/vardotacc_vv_i16_m.txt
vardotacc_vv_i16_m.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vardotacc_vv_i16_m.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vardotacc_vv_i16_m.c:30:6: warning: no previous prototype for 'vardotacc_vv_i16_m_golden' [-Wmissing-prototypes]
   30 | void vardotacc_vv_i16_m_golden(uint64_t *src_mask,uint64_t *dst_mask,int32_t *a,int16_t *b,int16_t *c,int32_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~~~~~
vardotacc_vv_i16_m.c: In function 'vardotacc_vv_i16_m_golden':
vardotacc_vv_i16_m.c:31:1: error: unknown type name 'Operator'
   31 | Operator Line --- TODO
      | ^~~~~~~~
vardotacc_vv_i16_m.c:31:15: error: expected '=', ',', ';', 'asm' or '__attribute__' before '--' token
   31 | Operator Line --- TODO
      |               ^~
vardotacc_vv_i16_m.c:35:5: warning: 'main' is normally a non-static function [-Wmain]
   35 | int main(void) {
      |     ^~~~
vardotacc_vv_i16_m.c: In function 'main':
vardotacc_vv_i16_m.c:37:14: warning: declaration of 'src_mask' shadows a parameter [-Wshadow]
   37 |     bool32_t src_mask;
      |              ^~~~~~~~
vardotacc_vv_i16_m.c:30:42: note: shadowed declaration is here
   30 | void vardotacc_vv_i16_m_golden(uint64_t *src_mask,uint64_t *dst_mask,int32_t *a,int16_t *b,int16_t *c,int32_t *exp_result) {
      |                                ~~~~~~~~~~^~~~~~~~
vardotacc_vv_i16_m.c:38:14: warning: declaration of 'dst_mask' shadows a parameter [-Wshadow]
   38 |     bool16_t dst_mask;
      |              ^~~~~~~~
vardotacc_vv_i16_m.c:30:61: note: shadowed declaration is here
   30 | void vardotacc_vv_i16_m_golden(uint64_t *src_mask,uint64_t *dst_mask,int32_t *a,int16_t *b,int16_t *c,int32_t *exp_result) {
      |                                                   ~~~~~~~~~~^~~~~~~~
vardotacc_vv_i16_m.c:39:16: warning: declaration of 'a' shadows a parameter [-Wshadow]
   39 |     int32x16_t a;
      |                ^
vardotacc_vv_i16_m.c:30:79: note: shadowed declaration is here
   30 | void vardotacc_vv_i16_m_golden(uint64_t *src_mask,uint64_t *dst_mask,int32_t *a,int16_t *b,int16_t *c,int32_t *exp_result) {
      |                                                                      ~~~~~~~~~^
vardotacc_vv_i16_m.c:40:16: warning: declaration of 'b' shadows a parameter [-Wshadow]
   40 |     int16x32_t b;
      |                ^
vardotacc_vv_i16_m.c:30:90: note: shadowed declaration is here
   30 | void vardotacc_vv_i16_m_golden(uint64_t *src_mask,uint64_t *dst_mask,int32_t *a,int16_t *b,int16_t *c,int32_t *exp_result) {
      |                                                                                 ~~~~~~~~~^
vardotacc_vv_i16_m.c:41:16: warning: declaration of 'c' shadows a parameter [-Wshadow]
   41 |     int16x32_t c;
      |                ^
vardotacc_vv_i16_m.c:30:101: note: shadowed declaration is here
   30 | void vardotacc_vv_i16_m_golden(uint64_t *src_mask,uint64_t *dst_mask,int32_t *a,int16_t *b,int16_t *c,int32_t *exp_result) {
      |                                                                                            ~~~~~~~~~^
vardotacc_vv_i16_m.c:49:13: warning: declaration of 'exp_result' shadows a parameter [-Wshadow]
   49 |     int32_t exp_result[16] = {0};
      |             ^~~~~~~~~~
vardotacc_vv_i16_m.c:30:112: note: shadowed declaration is here
   30 | void vardotacc_vv_i16_m_golden(uint64_t *src_mask,uint64_t *dst_mask,int32_t *a,int16_t *b,int16_t *c,int32_t *exp_result) {
      |                                                                                                       ~~~~~~~~~^~~~~~~~~~
vardotacc_vv_i16_m.c:51:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   51 |     data_init_bool(src_mask, exp_src_mask, 32, 0xffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vardotacc_vv_i16_m.c:66:64: warning: format '%x' expects argument of type 'unsigned int', but argument 5 has type 'int32_t' {aka 'long int'} [-Wformat=]
   66 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                               ~^                      ~~~~~~~~~~~~~
      |                                                                |                                |
      |                                                                unsigned int                     int32_t {aka long int}
      |                                                               %lx
vardotacc_vv_i16_m.c: In function 'vardotacc_vv_i16_m_golden':
vardotacc_vv_i16_m.c:81:1: error: expected declaration or statement at end of input
   81 | }
      | ^
vardotacc_vv_i16_m.c:30:42: warning: unused parameter 'src_mask' [-Wunused-parameter]
   30 | void vardotacc_vv_i16_m_golden(uint64_t *src_mask,uint64_t *dst_mask,int32_t *a,int16_t *b,int16_t *c,int32_t *exp_result) {
      |                                ~~~~~~~~~~^~~~~~~~
vardotacc_vv_i16_m.c:30:61: warning: unused parameter 'dst_mask' [-Wunused-parameter]
   30 | void vardotacc_vv_i16_m_golden(uint64_t *src_mask,uint64_t *dst_mask,int32_t *a,int16_t *b,int16_t *c,int32_t *exp_result) {
      |                                                   ~~~~~~~~~~^~~~~~~~
vardotacc_vv_i16_m.c:30:79: warning: unused parameter 'a' [-Wunused-parameter]
   30 | void vardotacc_vv_i16_m_golden(uint64_t *src_mask,uint64_t *dst_mask,int32_t *a,int16_t *b,int16_t *c,int32_t *exp_result) {
      |                                                                      ~~~~~~~~~^
vardotacc_vv_i16_m.c:30:90: warning: unused parameter 'b' [-Wunused-parameter]
   30 | void vardotacc_vv_i16_m_golden(uint64_t *src_mask,uint64_t *dst_mask,int32_t *a,int16_t *b,int16_t *c,int32_t *exp_result) {
      |                                                                                 ~~~~~~~~~^
vardotacc_vv_i16_m.c:30:101: warning: unused parameter 'c' [-Wunused-parameter]
   30 | void vardotacc_vv_i16_m_golden(uint64_t *src_mask,uint64_t *dst_mask,int32_t *a,int16_t *b,int16_t *c,int32_t *exp_result) {
      |                                                                                            ~~~~~~~~~^
vardotacc_vv_i16_m.c:30:112: warning: unused parameter 'exp_result' [-Wunused-parameter]
   30 | void vardotacc_vv_i16_m_golden(uint64_t *src_mask,uint64_t *dst_mask,int32_t *a,int16_t *b,int16_t *c,int32_t *exp_result) {
      |                                                                                                       ~~~~~~~~~^~~~~~~~~~
At top level:
vardotacc_vv_i16_m.c:35:5: warning: 'main' defined but not used [-Wunused-function]
   35 | int main(void) {
      |     ^~~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vardotacc_vv_i16_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vardotacc_vv_i16_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vardotacc_vv_i16_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vardotacc_vv_i16_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed